sass/_responsive-utilities.scss
/*

  Responsive Utilities

*/

img, canvas, iframe, video, svg { max-width: 100%; }


/* Wrap tables or pre elements in a div with this class */

.overflow-container {
  overflow-y: scroll;
}

/*
  Aspect ratios for media objects i.e canvas, iframe, video, svg etc.
  Defaults to 16x9
*/

.aspect-ratio {
  height: 0;
  padding-top: 56.25%;
  position: relative;
}

.aspect-ratio--object {
    bottom: 0;
    height: 100%;
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    width: 100%;
    z-index: 100;
}

